Comp/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMA
    ENTRADA
    FALSO
    VERDADERO

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> sentencia
Rule 2     sentencia -> sentencia sentencia
Rule 3     sentencia -> comparacion
Rule 4     sentencia -> op_print
Rule 5     sentencia -> ciclo
Rule 6     sentencia -> declarar
Rule 7     sentencia -> asignaEntero
Rule 8     sentencia -> asignaFlotante
Rule 9     sentencia -> asignaCaracter
Rule 10    sentencia -> asignaCadena
Rule 11    sentencia -> condicional
Rule 12    declarar -> ENTERO IDENTIFICADOR FIN_LINEA
Rule 13    declarar -> ENTERO IDENTIFICADOR IGUAL expresionEntero FIN_LINEA
Rule 14    declarar -> DECIMAL IDENTIFICADOR FIN_LINEA
Rule 15    declarar -> DECIMAL IDENTIFICADOR IGUAL expresionFlotante FIN_LINEA
Rule 16    declarar -> CARACTER IDENTIFICADOR FIN_LINEA
Rule 17    declarar -> CARACTER IDENTIFICADOR IGUAL CARACTER FIN_LINEA
Rule 18    declarar -> CADENA IDENTIFICADOR FIN_LINEA
Rule 19    declarar -> CADENA IDENTIFICADOR IGUAL CADENA FIN_LINEA
Rule 20    asignaEntero -> IDENTIFICADOR IGUAL NUMERO FIN_LINEA
Rule 21    asignaFlotante -> IDENTIFICADOR IGUAL FLOTANTE FIN_LINEA
Rule 22    asignaCaracter -> IDENTIFICADOR IGUAL CARACTER FIN_LINEA
Rule 23    asignaCadena -> IDENTIFICADOR IGUAL CADENA FIN_LINEA
Rule 24    terminoEntero -> terminoEntero MULTIPLICACION factorEntero
Rule 25    terminoEntero -> terminoEntero DIVISION factorEntero
Rule 26    terminoEntero -> factorEntero
Rule 27    terminoFlotante -> terminoFlotante MULTIPLICACION factorFlotante
Rule 28    terminoFlotante -> terminoFlotante DIVISION factorFlotante
Rule 29    terminoFlotante -> factorFlotante
Rule 30    factorEntero -> IDENTIFICADOR
Rule 31    factorFlotante -> IDENTIFICADOR
Rule 32    factorEntero -> NUMERO
Rule 33    factorEntero -> PARENTESIS_A expresionEntero PARENTESIS_C
Rule 34    factorFlotante -> PARENTESIS_A expresionFlotante PARENTESIS_C
Rule 35    factorFlotante -> FLOTANTE
Rule 36    expresionEntero -> expresionEntero SUMA terminoEntero
Rule 37    expresionEntero -> expresionEntero RESTA terminoEntero
Rule 38    expresionEntero -> terminoEntero
Rule 39    expresionFlotante -> expresionFlotante SUMA terminoFlotante
Rule 40    expresionFlotante -> expresionFlotante RESTA terminoFlotante
Rule 41    expresionFlotante -> terminoFlotante
Rule 42    op_print -> MUESTRA PARENTESIS_A IDENTIFICADOR PARENTESIS_C FIN_LINEA
Rule 43    op_print -> MUESTRA PARENTESIS_A CADENA PARENTESIS_C FIN_LINEA
Rule 44    ciclo -> PARA IDENTIFICADOR RANGO PARENTESIS_A NUMERO PARENTESIS_C bloque
Rule 45    bloque -> LLAVE_A sentencia LLAVE_C
Rule 46    condicional -> SI PARENTESIS_A comparacion PARENTESIS_C bloque
Rule 47    condicional -> SI PARENTESIS_A comparacion PARENTESIS_C bloque SI_NO bloque
Rule 48    comparacion -> factorEntero IGUAL_IGUAL factorEntero
Rule 49    comparacion -> factorEntero DIFERENTE factorEntero
Rule 50    comparacion -> factorEntero MAYOR factorEntero
Rule 51    comparacion -> factorEntero MENOR factorEntero
Rule 52    comparacion -> factorEntero MAYOR_IGUAL factorEntero
Rule 53    comparacion -> factorEntero MENOR_IGUAL factorEntero
Rule 54    comparacion -> factorFlotante IGUAL_IGUAL factorFlotante
Rule 55    comparacion -> factorFlotante DIFERENTE factorFlotante
Rule 56    comparacion -> factorFlotante MAYOR factorFlotante
Rule 57    comparacion -> factorFlotante MENOR factorFlotante
Rule 58    comparacion -> factorFlotante MAYOR_IGUAL factorFlotante
Rule 59    comparacion -> factorFlotante MENOR_IGUAL factorFlotante

Terminals, with rules where they appear

CADENA               : 18 19 19 23 43
CARACTER             : 16 17 17 22
COMA                 : 
DECIMAL              : 14 15
DIFERENTE            : 49 55
DIVISION             : 25 28
ENTERO               : 12 13
ENTRADA              : 
FALSO                : 
FIN_LINEA            : 12 13 14 15 16 17 18 19 20 21 22 23 42 43
FLOTANTE             : 21 35
IDENTIFICADOR        : 12 13 14 15 16 17 18 19 20 21 22 23 30 31 42 44
IGUAL                : 13 15 17 19 20 21 22 23
IGUAL_IGUAL          : 48 54
LLAVE_A              : 45
LLAVE_C              : 45
MAYOR                : 50 56
MAYOR_IGUAL          : 52 58
MENOR                : 51 57
MENOR_IGUAL          : 53 59
MUESTRA              : 42 43
MULTIPLICACION       : 24 27
NUMERO               : 20 32 44
PARA                 : 44
PARENTESIS_A         : 33 34 42 43 44 46 47
PARENTESIS_C         : 33 34 42 43 44 46 47
RANGO                : 44
RESTA                : 37 40
SI                   : 46 47
SI_NO                : 47
SUMA                 : 36 39
VERDADERO            : 
error                : 

Nonterminals, with rules where they appear

asignaCadena         : 10
asignaCaracter       : 9
asignaEntero         : 7
asignaFlotante       : 8
bloque               : 44 46 47 47
ciclo                : 5
comparacion          : 3 46 47
condicional          : 11
declarar             : 6
expresionEntero      : 13 33 36 37
expresionFlotante    : 15 34 39 40
factorEntero         : 24 25 26 48 48 49 49 50 50 51 51 52 52 53 53
factorFlotante       : 27 28 29 54 54 55 55 56 56 57 57 58 58 59 59
inicio               : 0
op_print             : 4
sentencia            : 1 2 2 45
terminoEntero        : 24 25 36 37 38
terminoFlotante      : 27 28 39 40 41

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . sentencia
    (2) sentencia -> . sentencia sentencia
    (3) sentencia -> . comparacion
    (4) sentencia -> . op_print
    (5) sentencia -> . ciclo
    (6) sentencia -> . declarar
    (7) sentencia -> . asignaEntero
    (8) sentencia -> . asignaFlotante
    (9) sentencia -> . asignaCaracter
    (10) sentencia -> . asignaCadena
    (11) sentencia -> . condicional
    (48) comparacion -> . factorEntero IGUAL_IGUAL factorEntero
    (49) comparacion -> . factorEntero DIFERENTE factorEntero
    (50) comparacion -> . factorEntero MAYOR factorEntero
    (51) comparacion -> . factorEntero MENOR factorEntero
    (52) comparacion -> . factorEntero MAYOR_IGUAL factorEntero
    (53) comparacion -> . factorEntero MENOR_IGUAL factorEntero
    (54) comparacion -> . factorFlotante IGUAL_IGUAL factorFlotante
    (55) comparacion -> . factorFlotante DIFERENTE factorFlotante
    (56) comparacion -> . factorFlotante MAYOR factorFlotante
    (57) comparacion -> . factorFlotante MENOR factorFlotante
    (58) comparacion -> . factorFlotante MAYOR_IGUAL factorFlotante
    (59) comparacion -> . factorFlotante MENOR_IGUAL factorFlotante
    (42) op_print -> . MUESTRA PARENTESIS_A IDENTIFICADOR PARENTESIS_C FIN_LINEA
    (43) op_print -> . MUESTRA PARENTESIS_A CADENA PARENTESIS_C FIN_LINEA
    (44) ciclo -> . PARA IDENTIFICADOR RANGO PARENTESIS_A NUMERO PARENTESIS_C bloque
    (12) declarar -> . ENTERO IDENTIFICADOR FIN_LINEA
    (13) declarar -> . ENTERO IDENTIFICADOR IGUAL expresionEntero FIN_LINEA
    (14) declarar -> . DECIMAL IDENTIFICADOR FIN_LINEA
    (15) declarar -> . DECIMAL IDENTIFICADOR IGUAL expresionFlotante FIN_LINEA
    (16) declarar -> . CARACTER IDENTIFICADOR FIN_LINEA
    (17) declarar -> . CARACTER IDENTIFICADOR IGUAL CARACTER FIN_LINEA
    (18) declarar -> . CADENA IDENTIFICADOR FIN_LINEA
    (19) declarar -> . CADENA IDENTIFICADOR IGUAL CADENA FIN_LINEA
    (20) asignaEntero -> . IDENTIFICADOR IGUAL NUMERO FIN_LINEA
    (21) asignaFlotante -> . IDENTIFICADOR IGUAL FLOTANTE FIN_LINEA
    (22) asignaCaracter -> . IDENTIFICADOR IGUAL CARACTER FIN_LINEA
    (23) asignaCadena -> . IDENTIFICADOR IGUAL CADENA FIN_LINEA
    (46) condicional -> . SI PARENTESIS_A comparacion PARENTESIS_C bloque
    (47) condicional -> . SI PARENTESIS_A comparacion PARENTESIS_C bloque SI_NO bloque
    (30) factorEntero -> . IDENTIFICADOR
    (32) factorEntero -> . NUMERO
    (33) factorEntero -> . PARENTESIS_A expresionEntero PARENTESIS_C
    (31) factorFlotante -> . IDENTIFICADOR
    (34) factorFlotante -> . PARENTESIS_A expresionFlotante PARENTESIS_C
    (35) factorFlotante -> . FLOTANTE

    MUESTRA         shift and go to state 14
    PARA            shift and go to state 18
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CARACTER        shift and go to state 22
    CADENA          shift and go to state 17
    IDENTIFICADOR   shift and go to state 16
    SI              shift and go to state 24
    NUMERO          shift and go to state 19
    PARENTESIS_A    shift and go to state 15
    FLOTANTE        shift and go to state 23

    inicio                         shift and go to state 1
    sentencia                      shift and go to state 2
    comparacion                    shift and go to state 3
    op_print                       shift and go to state 4
    ciclo                          shift and go to state 5
    declarar                       shift and go to state 6
    asignaEntero                   shift and go to state 7
    asignaFlotante                 shift and go to state 8
    asignaCaracter                 shift and go to state 9
    asignaCadena                   shift and go to state 10
    condicional                    shift and go to state 11
    factorEntero                   shift and go to state 12
    factorFlotante                 shift and go to state 13

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> sentencia .
    (2) sentencia -> sentencia . sentencia
    (2) sentencia -> . sentencia sentencia
    (3) sentencia -> . comparacion
    (4) sentencia -> . op_print
    (5) sentencia -> . ciclo
    (6) sentencia -> . declarar
    (7) sentencia -> . asignaEntero
    (8) sentencia -> . asignaFlotante
    (9) sentencia -> . asignaCaracter
    (10) sentencia -> . asignaCadena
    (11) sentencia -> . condicional
    (48) comparacion -> . factorEntero IGUAL_IGUAL factorEntero
    (49) comparacion -> . factorEntero DIFERENTE factorEntero
    (50) comparacion -> . factorEntero MAYOR factorEntero
    (51) comparacion -> . factorEntero MENOR factorEntero
    (52) comparacion -> . factorEntero MAYOR_IGUAL factorEntero
    (53) comparacion -> . factorEntero MENOR_IGUAL factorEntero
    (54) comparacion -> . factorFlotante IGUAL_IGUAL factorFlotante
    (55) comparacion -> . factorFlotante DIFERENTE factorFlotante
    (56) comparacion -> . factorFlotante MAYOR factorFlotante
    (57) comparacion -> . factorFlotante MENOR factorFlotante
    (58) comparacion -> . factorFlotante MAYOR_IGUAL factorFlotante
    (59) comparacion -> . factorFlotante MENOR_IGUAL factorFlotante
    (42) op_print -> . MUESTRA PARENTESIS_A IDENTIFICADOR PARENTESIS_C FIN_LINEA
    (43) op_print -> . MUESTRA PARENTESIS_A CADENA PARENTESIS_C FIN_LINEA
    (44) ciclo -> . PARA IDENTIFICADOR RANGO PARENTESIS_A NUMERO PARENTESIS_C bloque
    (12) declarar -> . ENTERO IDENTIFICADOR FIN_LINEA
    (13) declarar -> . ENTERO IDENTIFICADOR IGUAL expresionEntero FIN_LINEA
    (14) declarar -> . DECIMAL IDENTIFICADOR FIN_LINEA
    (15) declarar -> . DECIMAL IDENTIFICADOR IGUAL expresionFlotante FIN_LINEA
    (16) declarar -> . CARACTER IDENTIFICADOR FIN_LINEA
    (17) declarar -> . CARACTER IDENTIFICADOR IGUAL CARACTER FIN_LINEA
    (18) declarar -> . CADENA IDENTIFICADOR FIN_LINEA
    (19) declarar -> . CADENA IDENTIFICADOR IGUAL CADENA FIN_LINEA
    (20) asignaEntero -> . IDENTIFICADOR IGUAL NUMERO FIN_LINEA
    (21) asignaFlotante -> . IDENTIFICADOR IGUAL FLOTANTE FIN_LINEA
    (22) asignaCaracter -> . IDENTIFICADOR IGUAL CARACTER FIN_LINEA
    (23) asignaCadena -> . IDENTIFICADOR IGUAL CADENA FIN_LINEA
    (46) condicional -> . SI PARENTESIS_A comparacion PARENTESIS_C bloque
    (47) condicional -> . SI PARENTESIS_A comparacion PARENTESIS_C bloque SI_NO bloque
    (30) factorEntero -> . IDENTIFICADOR
    (32) factorEntero -> . NUMERO
    (33) factorEntero -> . PARENTESIS_A expresionEntero PARENTESIS_C
    (31) factorFlotante -> . IDENTIFICADOR
    (34) factorFlotante -> . PARENTESIS_A expresionFlotante PARENTESIS_C
    (35) factorFlotante -> . FLOTANTE

    $end            reduce using rule 1 (inicio -> sentencia .)
    MUESTRA         shift and go to state 14
    PARA            shift and go to state 18
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    CARACTER        shift and go to state 22
    CADENA          shift and go to state 17
    IDENTIFICADOR   shift and go to state 16
    SI              shift and go to state 24
    NUMERO          shift and go to state 19
    PARENTESIS_A    shift and go to state 15
    FLOTANTE        shift and go to state 23

    sentencia                      shift and go to state 25
    comparacion                    shift and go to state 3
    op_print                       shift and go to state 4
    ciclo                          shift and go to state 5
    declarar                       shift and go to state 6
    asignaEntero                   shift and go to state 7
    asignaFlotante                 shift and go to state 8
    asignaCaracter                 shift and go to state 9
    asignaCadena                   shift and go to state 10
    condicional                    shift and go to state 11
    factorEntero                   shift and go to state 12
    factorFlotante                 shift and go to state 13

state 3

    (3) sentencia -> comparacion .

    MUESTRA         reduce using rule 3 (sentencia -> comparacion .)
    PARA            reduce using rule 3 (sentencia -> comparacion .)
    ENTERO          reduce using rule 3 (sentencia -> comparacion .)
    DECIMAL         reduce using rule 3 (sentencia -> comparacion .)
    CARACTER        reduce using rule 3 (sentencia -> comparacion .)
    CADENA          reduce using rule 3 (sentencia -> comparacion .)
    IDENTIFICADOR   reduce using rule 3 (sentencia -> comparacion .)
    SI              reduce using rule 3 (sentencia -> comparacion .)
    NUMERO          reduce using rule 3 (sentencia -> comparacion .)
    PARENTESIS_A    reduce using rule 3 (sentencia -> comparacion .)
    FLOTANTE        reduce using rule 3 (sentencia -> comparacion .)
    $end            reduce using rule 3 (sentencia -> comparacion .)
    LLAVE_C         reduce using rule 3 (sentencia -> comparacion .)


state 4

    (4) sentencia -> op_print .

    MUESTRA         reduce using rule 4 (sentencia -> op_print .)
    PARA            reduce using rule 4 (sentencia -> op_print .)
    ENTERO          reduce using rule 4 (sentencia -> op_print .)
    DECIMAL         reduce using rule 4 (sentencia -> op_print .)
    CARACTER        reduce using rule 4 (sentencia -> op_print .)
    CADENA          reduce using rule 4 (sentencia -> op_print .)
    IDENTIFICADOR   reduce using rule 4 (sentencia -> op_print .)
    SI              reduce using rule 4 (sentencia -> op_print .)
    NUMERO          reduce using rule 4 (sentencia -> op_print .)
    PARENTESIS_A    reduce using rule 4 (sentencia -> op_print .)
    FLOTANTE        reduce using rule 4 (sentencia -> op_print .)
    $end            reduce using rule 4 (sentencia -> op_print .)
    LLAVE_C         reduce using rule 4 (sentencia -> op_print .)


state 5

    (5) sentencia -> ciclo .

    MUESTRA         reduce using rule 5 (sentencia -> ciclo .)
    PARA            reduce using rule 5 (sentencia -> ciclo .)
    ENTERO          reduce using rule 5 (sentencia -> ciclo .)
    DECIMAL         reduce using rule 5 (sentencia -> ciclo .)
    CARACTER        reduce using rule 5 (sentencia -> ciclo .)
    CADENA          reduce using rule 5 (sentencia -> ciclo .)
    IDENTIFICADOR   reduce using rule 5 (sentencia -> ciclo .)
    SI              reduce using rule 5 (sentencia -> ciclo .)
    NUMERO          reduce using rule 5 (sentencia -> ciclo .)
    PARENTESIS_A    reduce using rule 5 (sentencia -> ciclo .)
    FLOTANTE        reduce using rule 5 (sentencia -> ciclo .)
    $end            reduce using rule 5 (sentencia -> ciclo .)
    LLAVE_C         reduce using rule 5 (sentencia -> ciclo .)


state 6

    (6) sentencia -> declarar .

    MUESTRA         reduce using rule 6 (sentencia -> declarar .)
    PARA            reduce using rule 6 (sentencia -> declarar .)
    ENTERO          reduce using rule 6 (sentencia -> declarar .)
    DECIMAL         reduce using rule 6 (sentencia -> declarar .)
    CARACTER        reduce using rule 6 (sentencia -> declarar .)
    CADENA          reduce using rule 6 (sentencia -> declarar .)
    IDENTIFICADOR   reduce using rule 6 (sentencia -> declarar .)
    SI              reduce using rule 6 (sentencia -> declarar .)
    NUMERO          reduce using rule 6 (sentencia -> declarar .)
    PARENTESIS_A    reduce using rule 6 (sentencia -> declarar .)
    FLOTANTE        reduce using rule 6 (sentencia -> declarar .)
    $end            reduce using rule 6 (sentencia -> declarar .)
    LLAVE_C         reduce using rule 6 (sentencia -> declarar .)


state 7

    (7) sentencia -> asignaEntero .

    MUESTRA         reduce using rule 7 (sentencia -> asignaEntero .)
    PARA            reduce using rule 7 (sentencia -> asignaEntero .)
    ENTERO          reduce using rule 7 (sentencia -> asignaEntero .)
    DECIMAL         reduce using rule 7 (sentencia -> asignaEntero .)
    CARACTER        reduce using rule 7 (sentencia -> asignaEntero .)
    CADENA          reduce using rule 7 (sentencia -> asignaEntero .)
    IDENTIFICADOR   reduce using rule 7 (sentencia -> asignaEntero .)
    SI              reduce using rule 7 (sentencia -> asignaEntero .)
    NUMERO          reduce using rule 7 (sentencia -> asignaEntero .)
    PARENTESIS_A    reduce using rule 7 (sentencia -> asignaEntero .)
    FLOTANTE        reduce using rule 7 (sentencia -> asignaEntero .)
    $end            reduce using rule 7 (sentencia -> asignaEntero .)
    LLAVE_C         reduce using rule 7 (sentencia -> asignaEntero .)


state 8

    (8) sentencia -> asignaFlotante .

    MUESTRA         reduce using rule 8 (sentencia -> asignaFlotante .)
    PARA            reduce using rule 8 (sentencia -> asignaFlotante .)
    ENTERO          reduce using rule 8 (sentencia -> asignaFlotante .)
    DECIMAL         reduce using rule 8 (sentencia -> asignaFlotante .)
    CARACTER        reduce using rule 8 (sentencia -> asignaFlotante .)
    CADENA          reduce using rule 8 (sentencia -> asignaFlotante .)
    IDENTIFICADOR   reduce using rule 8 (sentencia -> asignaFlotante .)
    SI              reduce using rule 8 (sentencia -> asignaFlotante .)
    NUMERO          reduce using rule 8 (sentencia -> asignaFlotante .)
    PARENTESIS_A    reduce using rule 8 (sentencia -> asignaFlotante .)
    FLOTANTE        reduce using rule 8 (sentencia -> asignaFlotante .)
    $end            reduce using rule 8 (sentencia -> asignaFlotante .)
    LLAVE_C         reduce using rule 8 (sentencia -> asignaFlotante .)


state 9

    (9) sentencia -> asignaCaracter .

    MUESTRA         reduce using rule 9 (sentencia -> asignaCaracter .)
    PARA            reduce using rule 9 (sentencia -> asignaCaracter .)
    ENTERO          reduce using rule 9 (sentencia -> asignaCaracter .)
    DECIMAL         reduce using rule 9 (sentencia -> asignaCaracter .)
    CARACTER        reduce using rule 9 (sentencia -> asignaCaracter .)
    CADENA          reduce using rule 9 (sentencia -> asignaCaracter .)
    IDENTIFICADOR   reduce using rule 9 (sentencia -> asignaCaracter .)
    SI              reduce using rule 9 (sentencia -> asignaCaracter .)
    NUMERO          reduce using rule 9 (sentencia -> asignaCaracter .)
    PARENTESIS_A    reduce using rule 9 (sentencia -> asignaCaracter .)
    FLOTANTE        reduce using rule 9 (sentencia -> asignaCaracter .)
    $end            reduce using rule 9 (sentencia -> asignaCaracter .)
    LLAVE_C         reduce using rule 9 (sentencia -> asignaCaracter .)


state 10

    (10) sentencia -> asignaCadena .

    MUESTRA         reduce using rule 10 (sentencia -> asignaCadena .)
    PARA            reduce using rule 10 (sentencia -> asignaCadena .)
    ENTERO          reduce using rule 10 (sentencia -> asignaCadena .)
    DECIMAL         reduce using rule 10 (sentencia -> asignaCadena .)
    CARACTER        reduce using rule 10 (sentencia -> asignaCadena .)
    CADENA          reduce using rule 10 (sentencia -> asignaCadena .)
    IDENTIFICADOR   reduce using rule 10 (sentencia -> asignaCadena .)
    SI              reduce using rule 10 (sentencia -> asignaCadena .)
    NUMERO          reduce using rule 10 (sentencia -> asignaCadena .)
    PARENTESIS_A    reduce using rule 10 (sentencia -> asignaCadena .)
    FLOTANTE        reduce using rule 10 (sentencia -> asignaCadena .)
    $end            reduce using rule 10 (sentencia -> asignaCadena .)
    LLAVE_C         reduce using rule 10 (sentencia -> asignaCadena .)


state 11

    (11) sentencia -> condicional .

    MUESTRA         reduce using rule 11 (sentencia -> condicional .)
    PARA            reduce using rule 11 (sentencia -> condicional .)
    ENTERO          reduce using rule 11 (sentencia -> condicional .)
    DECIMAL         reduce using rule 11 (sentencia -> condicional .)
    CARACTER        reduce using rule 11 (sentencia -> condicional .)
    CADENA          reduce using rule 11 (sentencia -> condicional .)
    IDENTIFICADOR   reduce using rule 11 (sentencia -> condicional .)
    SI              reduce using rule 11 (sentencia -> condicional .)
    NUMERO          reduce using rule 11 (sentencia -> condicional .)
    PARENTESIS_A    reduce using rule 11 (sentencia -> condicional .)
    FLOTANTE        reduce using rule 11 (sentencia -> condicional .)
    $end            reduce using rule 11 (sentencia -> condicional .)
    LLAVE_C         reduce using rule 11 (sentencia -> condicional .)


state 12

    (48) comparacion -> factorEntero . IGUAL_IGUAL factorEntero
    (49) comparacion -> factorEntero . DIFERENTE factorEntero
    (50) comparacion -> factorEntero . MAYOR factorEntero
    (51) comparacion -> factorEntero . MENOR factorEntero
    (52) comparacion -> factorEntero . MAYOR_IGUAL factorEntero
    (53) comparacion -> factorEntero . MENOR_IGUAL factorEntero

    IGUAL_IGUAL     shift and go to state 26
    DIFERENTE       shift and go to state 27
    MAYOR           shift and go to state 28
    MENOR           shift and go to state 29
    MAYOR_IGUAL     shift and go to state 30
    MENOR_IGUAL     shift and go to state 31


state 13

    (54) comparacion -> factorFlotante . IGUAL_IGUAL factorFlotante
    (55) comparacion -> factorFlotante . DIFERENTE factorFlotante
    (56) comparacion -> factorFlotante . MAYOR factorFlotante
    (57) comparacion -> factorFlotante . MENOR factorFlotante
    (58) comparacion -> factorFlotante . MAYOR_IGUAL factorFlotante
    (59) comparacion -> factorFlotante . MENOR_IGUAL factorFlotante

    IGUAL_IGUAL     shift and go to state 32
    DIFERENTE       shift and go to state 33
    MAYOR           shift and go to state 34
    MENOR           shift and go to state 35
    MAYOR_IGUAL     shift and go to state 36
    MENOR_IGUAL     shift and go to state 37


state 14

    (42) op_print -> MUESTRA . PARENTESIS_A IDENTIFICADOR PARENTESIS_C FIN_LINEA
    (43) op_print -> MUESTRA . PARENTESIS_A CADENA PARENTESIS_C FIN_LINEA

    PARENTESIS_A    shift and go to state 38


state 15

    (33) factorEntero -> PARENTESIS_A . expresionEntero PARENTESIS_C
    (34) factorFlotante -> PARENTESIS_A . expresionFlotante PARENTESIS_C
    (36) expresionEntero -> . expresionEntero SUMA terminoEntero
    (37) expresionEntero -> . expresionEntero RESTA terminoEntero
    (38) expresionEntero -> . terminoEntero
    (39) expresionFlotante -> . expresionFlotante SUMA terminoFlotante
    (40) expresionFlotante -> . expresionFlotante RESTA terminoFlotante
    (41) expresionFlotante -> . terminoFlotante
    (24) terminoEntero -> . terminoEntero MULTIPLICACION factorEntero
    (25) terminoEntero -> . terminoEntero DIVISION factorEntero
    (26) terminoEntero -> . factorEntero
    (27) terminoFlotante -> . terminoFlotante MULTIPLICACION factorFlotante
    (28) terminoFlotante -> . terminoFlotante DIVISION factorFlotante
    (29) terminoFlotante -> . factorFlotante
    (30) factorEntero -> . IDENTIFICADOR
    (32) factorEntero -> . NUMERO
    (33) factorEntero -> . PARENTESIS_A expresionEntero PARENTESIS_C
    (31) factorFlotante -> . IDENTIFICADOR
    (34) factorFlotante -> . PARENTESIS_A expresionFlotante PARENTESIS_C
    (35) factorFlotante -> . FLOTANTE

    IDENTIFICADOR   shift and go to state 45
    NUMERO          shift and go to state 19
    PARENTESIS_A    shift and go to state 15
    FLOTANTE        shift and go to state 23

    expresionEntero                shift and go to state 39
    expresionFlotante              shift and go to state 40
    terminoEntero                  shift and go to state 41
    terminoFlotante                shift and go to state 42
    factorEntero                   shift and go to state 43
    factorFlotante                 shift and go to state 44

state 16

    (20) asignaEntero -> IDENTIFICADOR . IGUAL NUMERO FIN_LINEA
    (21) asignaFlotante -> IDENTIFICADOR . IGUAL FLOTANTE FIN_LINEA
    (22) asignaCaracter -> IDENTIFICADOR . IGUAL CARACTER FIN_LINEA
    (23) asignaCadena -> IDENTIFICADOR . IGUAL CADENA FIN_LINEA
    (30) factorEntero -> IDENTIFICADOR .
    (31) factorFlotante -> IDENTIFICADOR .

  ! reduce/reduce conflict for IGUAL_IGUAL resolved using rule 30 (factorEntero -> IDENTIFICADOR .)
  ! reduce/reduce conflict for DIFERENTE resolved using rule 30 (factorEntero -> IDENTIFICADOR .)
  ! reduce/reduce conflict for MAYOR resolved using rule 30 (factorEntero -> IDENTIFICADOR .)
  ! reduce/reduce conflict for MENOR resolved using rule 30 (factorEntero -> IDENTIFICADOR .)
  ! reduce/reduce conflict for MAYOR_IGUAL resolved using rule 30 (factorEntero -> IDENTIFICADOR .)
  ! reduce/reduce conflict for MENOR_IGUAL resolved using rule 30 (factorEntero -> IDENTIFICADOR .)
    IGUAL           shift and go to state 46
    IGUAL_IGUAL     reduce using rule 30 (factorEntero -> IDENTIFICADOR .)
    DIFERENTE       reduce using rule 30 (factorEntero -> IDENTIFICADOR .)
    MAYOR           reduce using rule 30 (factorEntero -> IDENTIFICADOR .)
    MENOR           reduce using rule 30 (factorEntero -> IDENTIFICADOR .)
    MAYOR_IGUAL     reduce using rule 30 (factorEntero -> IDENTIFICADOR .)
    MENOR_IGUAL     reduce using rule 30 (factorEntero -> IDENTIFICADOR .)

  ! IGUAL_IGUAL     [ reduce using rule 31 (factorFlotante -> IDENTIFICADOR .) ]
  ! DIFERENTE       [ reduce using rule 31 (factorFlotante -> IDENTIFICADOR .) ]
  ! MAYOR           [ reduce using rule 31 (factorFlotante -> IDENTIFICADOR .) ]
  ! MENOR           [ reduce using rule 31 (factorFlotante -> IDENTIFICADOR .) ]
  ! MAYOR_IGUAL     [ reduce using rule 31 (factorFlotante -> IDENTIFICADOR .) ]
  ! MENOR_IGUAL     [ reduce using rule 31 (factorFlotante -> IDENTIFICADOR .) ]


state 17

    (18) declarar -> CADENA . IDENTIFICADOR FIN_LINEA
    (19) declarar -> CADENA . IDENTIFICADOR IGUAL CADENA FIN_LINEA

    IDENTIFICADOR   shift and go to state 47


state 18

    (44) ciclo -> PARA . IDENTIFICADOR RANGO PARENTESIS_A NUMERO PARENTESIS_C bloque

    IDENTIFICADOR   shift and go to state 48


state 19

    (32) factorEntero -> NUMERO .

    IGUAL_IGUAL     reduce using rule 32 (factorEntero -> NUMERO .)
    DIFERENTE       reduce using rule 32 (factorEntero -> NUMERO .)
    MAYOR           reduce using rule 32 (factorEntero -> NUMERO .)
    MENOR           reduce using rule 32 (factorEntero -> NUMERO .)
    MAYOR_IGUAL     reduce using rule 32 (factorEntero -> NUMERO .)
    MENOR_IGUAL     reduce using rule 32 (factorEntero -> NUMERO .)
    MULTIPLICACION  reduce using rule 32 (factorEntero -> NUMERO .)
    DIVISION        reduce using rule 32 (factorEntero -> NUMERO .)
    PARENTESIS_C    reduce using rule 32 (factorEntero -> NUMERO .)
    SUMA            reduce using rule 32 (factorEntero -> NUMERO .)
    RESTA           reduce using rule 32 (factorEntero -> NUMERO .)
    MUESTRA         reduce using rule 32 (factorEntero -> NUMERO .)
    PARA            reduce using rule 32 (factorEntero -> NUMERO .)
    ENTERO          reduce using rule 32 (factorEntero -> NUMERO .)
    DECIMAL         reduce using rule 32 (factorEntero -> NUMERO .)
    CARACTER        reduce using rule 32 (factorEntero -> NUMERO .)
    CADENA          reduce using rule 32 (factorEntero -> NUMERO .)
    IDENTIFICADOR   reduce using rule 32 (factorEntero -> NUMERO .)
    SI              reduce using rule 32 (factorEntero -> NUMERO .)
    NUMERO          reduce using rule 32 (factorEntero -> NUMERO .)
    PARENTESIS_A    reduce using rule 32 (factorEntero -> NUMERO .)
    FLOTANTE        reduce using rule 32 (factorEntero -> NUMERO .)
    $end            reduce using rule 32 (factorEntero -> NUMERO .)
    LLAVE_C         reduce using rule 32 (factorEntero -> NUMERO .)
    FIN_LINEA       reduce using rule 32 (factorEntero -> NUMERO .)


state 20

    (12) declarar -> ENTERO . IDENTIFICADOR FIN_LINEA
    (13) declarar -> ENTERO . IDENTIFICADOR IGUAL expresionEntero FIN_LINEA

    IDENTIFICADOR   shift and go to state 49


state 21

    (14) declarar -> DECIMAL . IDENTIFICADOR FIN_LINEA
    (15) declarar -> DECIMAL . IDENTIFICADOR IGUAL expresionFlotante FIN_LINEA

    IDENTIFICADOR   shift and go to state 50


state 22

    (16) declarar -> CARACTER . IDENTIFICADOR FIN_LINEA
    (17) declarar -> CARACTER . IDENTIFICADOR IGUAL CARACTER FIN_LINEA

    IDENTIFICADOR   shift and go to state 51


state 23

    (35) factorFlotante -> FLOTANTE .

    IGUAL_IGUAL     reduce using rule 35 (factorFlotante -> FLOTANTE .)
    DIFERENTE       reduce using rule 35 (factorFlotante -> FLOTANTE .)
    MAYOR           reduce using rule 35 (factorFlotante -> FLOTANTE .)
    MENOR           reduce using rule 35 (factorFlotante -> FLOTANTE .)
    MAYOR_IGUAL     reduce using rule 35 (factorFlotante -> FLOTANTE .)
    MENOR_IGUAL     reduce using rule 35 (factorFlotante -> FLOTANTE .)
    MULTIPLICACION  reduce using rule 35 (factorFlotante -> FLOTANTE .)
    DIVISION        reduce using rule 35 (factorFlotante -> FLOTANTE .)
    PARENTESIS_C    reduce using rule 35 (factorFlotante -> FLOTANTE .)
    SUMA            reduce using rule 35 (factorFlotante -> FLOTANTE .)
    RESTA           reduce using rule 35 (factorFlotante -> FLOTANTE .)
    MUESTRA         reduce using rule 35 (factorFlotante -> FLOTANTE .)
    PARA            reduce using rule 35 (factorFlotante -> FLOTANTE .)
    ENTERO          reduce using rule 35 (factorFlotante -> FLOTANTE .)
